<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCFFFFFF"
    android:clipChildren="false"
    android:clipToPadding="false"
    tools:context=".splash.SplashActivity">

    <LinearLayout
        android:id="@+id/login_fragment_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_main"
            android:textSize="60sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/choose_Edt"/>


        <com.rey.material.widget.Button
            android:id="@+id/loginBtn"
            style="@style/RubykoButton"
            android:layout_marginBottom="40dp"
            android:text="@string/login_btn"
            android:layout_height="wrap_content"/>

        <com.rey.material.widget.Button
            android:id="@+id/regisrBtn"
            style="@style/RubykoButton"
            android:text="@string/registr_btn"
            android:layout_height="wrap_content"/>


    </LinearLayout>


</RelativeLayout>
