<?xml version="1.0" encoding="utf-8"?>
<com.rey.material.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:background="#CCFFFFFF"
    tools:context=".splash.SplashActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <com.rey.material.widget.Button
            android:id="@+id/update_btn"
            style="@style/RepeatButton"
            android:layout_height="wrap_content"
            android:text="Show all words"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_btn"
            android:textSize="20sp"
            android:textAlignment="center"
            android:padding="5dp"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:weightSum="2"
            android:orientation="horizontal">



            <alex.personalvocabulary.view.RubykoEditText
                android:id="@+id/repeat_editText_minValue"
                android:inputType="number"
                android:maxLength="6"
                android:hint="@string/text_min_value"
                style="@style/RepeatEditText"
                app:et_inputId="@+id/minValue_Edt"
                android:layout_width="match_parent"
                android:layout_marginLeft="60dp"/>

            <alex.personalvocabulary.view.RubykoEditText
                android:id="@+id/repeat_editText_maxValue"
                android:inputType="number"
                android:maxLength="6"
                android:hint="@string/text_max_value"
                style="@style/RepeatEditText"
                app:et_inputId="@+id/maxValue_Edt"
                android:layout_width="match_parent"
                android:layout_marginRight="60dp"/>

        </LinearLayout>

        <com.rey.material.widget.Button
            android:id="@+id/words_list_btn"
            style="@style/RepeatButton"
            android:layout_height="wrap_content"
            android:text="Start"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/repeat_word_Edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:textSize="25sp"
            android:textAlignment="center"
            android:text=""
            android:textColor="@android:color/black"
            android:padding="5dp"
            android:paddingBottom="10dp"
            android:background="@drawable/text_view"
            />

        <com.rey.material.widget.Button
            android:id="@+id/get_translation_btn"
            style="@style/RepeatButton"
            android:layout_height="wrap_content"
            android:text="Show the translation"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:id="@+id/repeat_translation_Edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="70dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:gravity="center"
            android:text=""
            android:textColor="@android:color/black"
            android:padding="5dp"
            android:paddingBottom="10dp"
            android:background="@drawable/text_view"
            />


        <com.rey.material.widget.Button
            android:id="@+id/delete_btn"
            style="@style/RepeatButton"
            android:layout_height="wrap_content"
            android:text="Next word"
            android:layout_marginTop="15dp"/>







    </LinearLayout>


</com.rey.material.widget.RelativeLayout>
